test/semantic_errors/invalid_assignment4.mc
void main() {
    bool b;
    b = 10; /* cannot assign int constant to bool */
}